--- a/index.html
+++ b/index.html
@@ -3,14 +3,24 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="shortcut icon" href="./images/logo.png" type="image/x-icon" />
     <link rel="stylesheet" href="style.css" />
-    <title>Parallax Website</title>
+    <title>Clarusway-Parallax Website</title>
   </head>
   <body>
-    <div class="background1">
-      <h1 class="baslik">CLARUSWAY</h1>
+    <!-- ----------------------------------------------------------------------- -->
+    <!--                             START SCREEN                                -->
+    <!-- ----------------------------------------------------------------------- -->
+    <!-- --------------------- BEM: Block Element Modifier --------------------- -->
+    <div class="background--image1">
+      <div class="heading-container">
+        <span class="heading-container__heading">CLARUSWAY</span>
+      </div>
     </div>
-    <div class="paragraf full_stack">
+    <!-- ----------------------------------------------------------------------- -->
+    <!--                              CONTENT PART                               -->
+    <!-- ----------------------------------------------------------------------- -->
+    <section class="section section-light">
       <h2>Full Stack Development</h2>
       <p>
         <strong>The Full Stack Web Development program</strong> we offer can
@@ -28,12 +38,17 @@
         They work on the database and debugging of web applications or websites.
         Are you ready to give your career a boost?
       </p>
-    </div>
+    </section>
 
-    <div class="background2">
-      <img src="images/clarusway (1).png" alt="clarusway logo" />
+    <!-- ----------------------------------------------------------------------- -->
+    <div class="background--image2">
+      <img
+        class="heading-container__logo"
+        src="images/clarusway.png"
+        alt="clarusway logo"
+      />
     </div>
-    <div class="paragraf aws">
+    <section class="section section-dark">
       <h2>AWS Solution Architect & DevOps</h2>
       <p>
         The skills you learn in our AWS and DevOps Learning Path will enhance
@@ -44,11 +59,14 @@
         learning services on AWS and enhance your tech skills by learning DevOps
         tools.
       </p>
+    </section>
+    <!-- ----------------------------------------------------------------------- -->
+    <div class="background--image3">
+      <div class="heading-container">
+        <span class="heading-container__text">CLARUSWAY</span>
+      </div>
     </div>
-    <div class="background3">
-      <h1 class="baslik">Way To Reinvent Yourself</h1>
-    </div>
-    <div class="paragraf data">
+    <section class="section section-light">
       <h2>Data Analytics & Machine Learning</h2>
       <p>
         Extract knowledge and insights from different data types, Use scientific
@@ -60,11 +78,14 @@
         <b>gain the leadership and communication skills </b>necessary to deliver
         measurable and tangible results to a variety of business stakeholders!
       </p>
+    </section>
+    <!-- ----------------------------------------------------------------------- -->
+    <div class="background--image4">
+      <div class="heading-container">
+        <span class="heading-container__text">Clarusway Team</span>
+      </div>
     </div>
-    <div class="background4">
-      <p class="baslik">Clarusway Team</p>
-    </div>
-    <div class="paragraf why_cw">
+    <section class="section section-dark">
       <h2>Why Clarusway</h2>
       <p>
         From beginners to intermediate level students, our curated content will
@@ -77,9 +98,15 @@
         next-generation jobs! From beginners to IT professionals, we offer
         cutting-edge programs used today by leading corporations.
       </p>
-    </div>
-    <div class="background_last">
-      <h1 class="baslik">CHOOSE YOUR FUTURE</h1>
+    </section>
+
+    <!-- ----------------------------------------------------------------------- -->
+    <!--                               LAST SCREEN                               -->
+    <!-- ----------------------------------------------------------------------- -->
+    <div class="background--image1">
+      <div class="heading-container">
+        <span class="heading-container__heading">choose your feature</span>
+      </div>
     </div>
   </body>
 </html>
